foo-bar/tsm/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s1
  namespace: test-ingress
  labels:
    app: hello
spec:
  selector:
    app: hello
    tier: web
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: s2
  namespace: test-ingress
  labels:
    app: hello2
spec:
  selector:
    app: hello2
    tier: web
  ports:
  - port: 80
    targetPort: 8080
