foo-bar/tsm/04-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-destination
spec:
  host: istio-node
  subsets:
  - name: v1
    labels:
      version: v1
