foo-bar/tsm/05-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-ingress
  namespace: test-ingress
  labels:
    app: hello
spec:
  hosts:
  - "foo.bar.com"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        exact: /foo
    route:
    - destination:
        host: s1
        port:
          number: 80
    -uri:
        exact: /bar
    route:    
    - destination:
        host: s2
        port:
          number: 80
